play with some zitifications

--- a/examples/clients/simple-chatbot/mcp_simple_chatbot/servers_config.json
+++ b/examples/clients/simple-chatbot/mcp_simple_chatbot/servers_config.json
@@ -7,6 +7,9 @@
     "puppeteer": {
       "command": "npx",
       "args": ["-y", "@modelcontextprotocol/server-puppeteer"]
+    },
+    "simple-prompt": {
+      "url": "http://127.0.0.1:8000/sse"
     }
   }
 }
