--- a/examples/servers/simple-prompt/pyproject.toml
+++ b/examples/servers/simple-prompt/pyproject.toml
@@ -18,7 +18,14 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
 ]
-dependencies = ["anyio>=4.5", "click>=8.2.0", "httpx>=0.27", "mcp"]
+dependencies = [
+    "anyio>=4.5",
+    "click>=8.2.0",
+    "httpx>=0.27",
+    "mcp",
+    "openziti==1.3.1",
+    # "openziti @ file:/home/kbingham/Sites/netfoundry/github/ziti-sdk-py",
+]
 
 [project.scripts]
 mcp-simple-prompt = "mcp_simple_prompt.server:main"
